<resources>
    <string name="app_name">Dicoding Stories</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Upload your exciting stories while learning with Dicoding, see stories from others, and discover their locations!</string>
    <string name="title_welcome_page">Welcome!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to share your story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_dicoding_story">Welcome to Dicoding Stories</string>
    <string name="logo_dicoding">Dicoding Logo</string>
    <string name="get_started_with_sign_up">Get Started with Sign Up!</string>
    <string name="get_start_to_login">Get Started with Login!</string>
    <string name="story_not_found">No Stories Found</string>
    <string name="no_data_found">No Data Found.</string>
    <string name="description">Description</string>
    <string name="list_story">Story List</string>
    <string name="detail_story_not_found">No story details found</string>
    <string name="image_story">Story Image</string>
    <string name="created_at">Created At</string>
    <string name="empty_image_warning">Please upload an image file first.</string>
    <string name="create_story">Create Story</string>
    <string name="upload">Upload</string>
    <string name="image_preview">Photo Preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="user">User</string>
    <string name="language">Language</string>
    <string name="see_story">See Story</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="greeting">Hi, %s</string>
    <string name="no_media_selected">No media selected</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="invalid_email">Format email is invalid</string>
    <string name="invalid_password">Password must not be less than 8 characters</string>
    <string name="invalid_password_email">Email or password is invalid</string>
    <string name="loading">Loading..</string>
    <string name="inavailable_date">Upload date is not available.</string>
    <string name="image">Image</string>
    <string name="faild_capture_image">Failed to capture image</string>
    <string name="faild_capture_uri">Failed to capture image URI</string>
    <string name="failed_image_process">Failed to process the image.</string>
    <string name="permission_granted">"Permission request granted"</string>
    <string name="permission_denied">"Permission request denied"</string>
    <string name="title_activity_maps">Stories Maps</string>
    <string name="map">Maps</string>
    <string name="location_unavailable">Location Unavailable</string>
    <string name="include_location">Include Your Location</string>

</resources>